# db_scan

./: .gitignore  README.md  pyproject.toml
db_scan/: main.py  scanner.py  writer.py
